# distiller-sdk

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  MANIFEST.in  README.md  build-deb.sh  build.sh  eink.conf.example  eink.conf.template  main.py  platform-detect.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml
configs/: armsom-rk3576.conf  cm5.conf  myd-lr3576.conf  radxa-zero3.conf
debian/: README.Debian  README.source  activate.sh  changelog  control  copyright  dirs  distiller-sdk.lintian-overrides  install  install.cm5  platform-detect.sh  postinst  postinst.cm5  postinst.radxa  postrm  preinst  prerm  rules  triggers
src/distiller_cm5_sdk/: __init__.py
src/distiller_cm5_sdk/hardware/audio/: README.md  _audio_test.py  audio.py
src/distiller_cm5_sdk/hardware/camera/: README.md  _camera_unit_test.py  camera.py
src/distiller_cm5_sdk/hardware/eink/: README.md  __init__.py  _display_test.py  display.py  eink.py  test_display.py  test_eink_flush.py  test_flip_simple.py
src/distiller_cm5_sdk/hardware/eink/composer/: __init__.py  cli.py  composer.py  dithering.py  image_ops.py  template_renderer.py  text.py
src/distiller_cm5_sdk/hardware/eink/lib/: Cargo.toml  Makefile  Makefile.rust  build.rs  distiller_display_sdk.c  distiller_display_sdk.h
src/distiller_cm5_sdk/hardware/eink/lib/src/: config.rs  display.rs  error.rs  ffi.rs  ffi_image_processing.rs  font_6x8.rs  hardware.rs  image.rs  image_processing.rs  lib.rs  protocol.rs
src/distiller_cm5_sdk/hardware/eink/lib/src/firmware/: README.md  epd128x250.rs  epd240x416.rs  examples.rs  mod.rs
src/distiller_cm5_sdk/hardware/sam/: README.md  __init__.py  _led_unit_test.py  _sam_unit_test.py  led.py  sam.py
src/distiller_cm5_sdk/parakeet/: README.md  __init__.py  parakeet.py  parakeet_asr.py
src/distiller_cm5_sdk/piper/: README.md  __init__.py  piper.py
src/distiller_cm5_sdk/whisper/: README.md  __init__.py  fast_whisper.py
src/distiller_sdk/: __init__.py  exceptions.py  hardware_status.py
src/distiller_sdk/hardware/audio/: README.md  __init__.py  _audio_test.py  audio.py
src/distiller_sdk/hardware/camera/: README.md  __init__.py  _camera_unit_test.py  camera.py
src/distiller_sdk/hardware/eink/: README.md  __init__.py  _display_test.py  display.py
src/distiller_sdk/hardware/eink/composer/: __init__.py  cli.py  composer.py  dithering.py  image_ops.py  template_renderer.py  text.py
src/distiller_sdk/hardware/eink/lib/: .gitignore  Cargo.toml  Makefile  Makefile.rust  build.rs  cbindgen.toml  clippy.toml  rustfmt.toml
src/distiller_sdk/hardware/eink/lib/src/: config.rs  display.rs  ffi.rs  font_6x8.rs  image.rs  image_processing.rs  lib.rs  protocol.rs
src/distiller_sdk/hardware/eink/lib/src/firmware/: README.md  epd128x250.rs  epd240x416.rs  mod.rs
src/distiller_sdk/hardware/sam/: README.md  __init__.py  led.py  led_interactive_demo.py
src/distiller_sdk/parakeet/: README.md  __init__.py  parakeet.py
src/distiller_sdk/piper/: README.md  __init__.py  piper.py
src/distiller_sdk/whisper/: README.md  __init__.py  fast_whisper.py
tests/: conftest.py
tests/unit/: test_ai_detection.py  test_audio_detection.py  test_camera_detection.py  test_context_managers.py  test_display_detection.py  test_exceptions.py  test_hardware_status.py  test_led_detection.py  test_thread_safety.py
wiki/: AI-Modules.md  API-Reference.md  Development-Guide.md  Hardware-Modules.md  Home.md  Installation.md  Troubleshooting.md
