[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
version = "0.1.0"
name = "distiller-sdk"
readme = "README.md"
authors = [
  { name = "PamirAI Inc", email = "founders@pamir.ai" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "build>=1.2.2.post1",
  "faster-whisper>=1.1.1",
  "opencv-python>=4.11.0.86",
  "pyaudio>=0.2.14",
  "pyserial>=3.5",
  "qrcode[pil]>=8.2",
  "sherpa-onnx<1.12.7",
  "sounddevice>=0.5.2",
  "soundfile>=0.13.1",
  "spidev>=3.7",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
"distiller_sdk" = [
  "hardware/eink/lib/*.so",
  "hardware/eink/lib/*.h",
  "parakeet/models/**/*",
  "piper/models/**/*",
  "piper/piper/**/*",
  "whisper/models/**/*",
  "hardware/audio/test_audio.wav",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.uv]
index-url = "https://pypi.org/simple"
