[package]
name = "distiller_display_sdk"
version = "3.0.0"
edition = "2024"

[lib]
name = "distiller_display_sdk_shared"
crate-type = ["cdylib", "rlib"]

[dependencies]
gpiod = "0.3"
spidev = "0.7"
image = "0.25"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
cbindgen = "0.29"

[[bin]]
name = "test_display"
path = "src/bin/test_display.rs"
